--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.3.3",
     "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "sinon": "^1.17.1",
     "sinon-chai": "^2.8.0",
     "webpack": "^1.12.2"
@@ -32,7 +33,8 @@
     "lodash": "^3.10.1"
   },
   "peerDependencies": {
-    "react": "^0.14.0"
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
   },
   "scripts": {
     "pretest": "jscs ./",
